# nosok

./: .dockerignore  .env  .gitignore  Dockerfile  Procfile  README.md  async_test.py  base.py  bot.py  core.py  exceptions.py  handlers.py  index.py  pyproject.toml  requirements.txt  requirments.txt  start.bat  technical_reference.md  utils.py
backend/: app.py  auth.py  database.py  handlers.py  polling.py  utils.py
backend/blueprints/: authentication.py  main.py
bot/: base.py  core.py  data.txt  database.py  exceptions.py  handlers.py  index.py  languages.py  main.py  main.ui  player.py  utils.py  views.py
bot/cogs/: music.py  settings.py
bot/orm/: base.py  models.py
bot/translated/: EN.json  RU.json
cogs/: music.py  other.py  settings.py
commands/: __init__.py  external.py  help.py  music.py  set_prefix.py  utils.py
config/: config.py  descriptions.json  servers.json
downloads/: 773795866037059586.opus
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  global_ctx.jsx  global_ctx.tsx  index.jsx  index.scss  index.tsx  interfaces.tsx  runtimeData.tsx
frontend/src/components/: Content.jsx  Content.module.scss
frontend/src/components/ContentRelated/: Charts.module.scss  Charts.tsx  Log.module.scss  Log.tsx
frontend/src/components/Header/: Header.jsx  Header.module.scss  Header.tsx  Logo.jsx  (+4 more)
pinger/: index.py
server/: api.py  core.py  handler.py  handlers.py  login.py  main.py  polling.py  wsgi.py
server/blueprints/: control.py  login.py  main.py
server/nosok-react/: package-lock.json  package.json
server/nosok-react/public/: index.html
server/nosok-react/src/: App.js  App.module.css  index.css  index.js  setupProxy.js  utils.js
server/static/style/: style.scss
server/templates/: base.html  control.html  index.html  login.html  register.html
server/templates/auth/: login.html  register.html
web_platform/: app.py  asgi.py  polling.py
web_platform/blueprints/: api.py  main.py
web_platform/nosok-solid/: index.html  package-lock.json  package.json  vite.config.js
web_platform/nosok-solid/src/: App.jsx  App.module.css
(+48 files in other folders)
