[tool.poetry]
name = "nosok-bot"
version = "0.1.0"
description = "Discord music bot"
authors = ["l4blee"]

[tool.poetry.dependencies]
python = "3.9.6"
"discord.py" = "1.7.3"
discord-components = "2.1.2"
PyNaCl = "1.4.0"
psutil = "5.8.0"
requests = "2.26.0"
yt-dlp = "^2021.12.27"
pymongo = {extras = ["srv"], version = "^4.0.2"}
Flask = "^2.0.3"
pydub = "^0.25.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"