[tool.poetry]
name = "nosok-bot"
version = "0.1.0"
description = "Discord music bot"
authors = ["l4blee"]

[tool.poetry.dependencies]
python = ">=3.10.0"
psutil = "5.8.0"
yt-dlp = "^2021.12.27"
pydub = "^0.25.1"
numpy = "^1.22.3"
typing-extensions = "^4.2.0"
pymongo = {extras = ["srv"], version = "^4.0.2"}
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git", extras = ["voice"]}
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
scipy = "^1.8.1"
Flask = "^2.0.3"
Flask-Login = "^0.6.1"
Flask-WTF = "^1.0.1"
Flask-Cors = "^3.0.10"
Flask-RESTful = "^0.3.9"
Flask-SocketIO = "^5.2.0"
bcrypt = "^3.2.2"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry>=1.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"