[tool.poetry]
name = "nosok-bot"
version = "0.1.0"
description = "Discord music bot"
authors = ["l4blee"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
psutil = "^5.8.0"
yt-dlp = "^2021.12.27"
pydub = "^0.25.1"
numpy = "^1.22.3"
typing-extensions = "^4.2.0"
pymongo = {extras = ["srv"], version = "^4.0.2"}
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git", extras = ["voice"]}
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
bcrypt = "^3.2.2"
sanic = "20.12.6"
python-socketio = "^5.7.1"
PyJWT = "^2.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"